--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
         <button class="btn btn-primary my-3 solvebtn">Solve</button>
     </div>
 
+    <div>
+        <p>Enter Youe Sudoku Board and Press Solve Button</p>
+    </div>
+
 
     <script>
         var sudokuboard=[
