--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </style>
 </head>
 <body class="text-center">
-    <h2 class="bg-success text-center">SUDOKU GAME</h2>
+    <h2 class="bg-success text-center">SUDOKU SOLVER</h2>
     <div id="board" class="mt-5">
         <div class="level">
             <input type="number" min="1" max="9" class="input row1col1">
