--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             let col = parseInt(event.target.classList[1].slice(-1),10)-1;
             sudokuboard[row][col]=input_value;
 
-            if(!isvalid([row,col],input_value)){
+            if(!isvalid([row,col],input_value) || input_value>9){
                 event.target.style.color = "red";
                 if (!user_invalid.some(pos => pos[0] === row && pos[1] === col)) {
                     user_invalid.push([row, col]);
