--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                 if (!user_invalid.some(pos => pos[0] === row && pos[1] === col)) {
                     user_invalid.push([row, col]);
                 }
+                alert("Each number from 1 to 9 must be used exactly once in each row, column, and 3x3 box within the grid.");
 
             }
             else{
