--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>Document</title>
     <style>
          #board {
-            display: inline-block;
+            display: flex;
+             flex-direction:column;
+             align-items:center;
+             
         }
 
         .input {
@@ -67,6 +70,7 @@
 </head>
 <body class="text-center">
     <h2 class="bg-success text-center">SUDOKU SOLVER</h2>
+    <p class="error_Message text-danger"></p>
     <div id="board" class="mt-5">
         <div class="level">
             <input type="number" min="1" max="9" class="input row1col1">
@@ -195,6 +199,8 @@
         const solvebttn = document.querySelector('.solvebtn');
         var inputboxes = document.querySelectorAll('.input');
 
+        const error_message = document.querSelectorAll('.error_Message');
+
         //Here the SudokuSolver code starts
 
         //This function is for finding the empty block in the board
@@ -283,8 +289,8 @@
                 if (!user_invalid.some(pos => pos[0] === row && pos[1] === col)) {
                     user_invalid.push([row, col]);
                 }
-                sleep(100);
-                alert("Each number from 1 to 9 must be used exactly once in each row, column, and 3x3 box within the grid.");
+                error_Message.innerHTML = "Each number from 1 to 9 must be used exactly once in each row, column, and 3x3 box within the grid.";
+                
 
             }
             else{
