--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         const solvebttn = document.querySelector('.solvebtn');
         var inputboxes = document.querySelectorAll('.input');
 
-        const error_message = document.querSelectorAll('.error_Message');
+        const error_message = document.querSelector('.error_Message');
 
         //Here the SudokuSolver code starts
 
