--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
 
     <div>
-        <p>Enter Youe Sudoku Board and Press Solve Button</p>
+        <p>Enter Youe Sudoku Puzzle and Press Solve Button</p>
     </div>
 
 
